export const snapshot = {};

snapshot[`nu / linux / find 1`] = `
"^(\$env.WUT_HOME | path join 'vendor' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/script/find?sysOsPlat=linux&wutNuPinned=1'#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '.nu' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'##"
`;

snapshot[`nu / windows / find 1`] = `
"^(\$env.WUT_HOME | path join 'vendor' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/script/find?sysOsPlat=windows&wutNuPinned=1'#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '.nu' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'##"
`;

snapshot[`pwsh / windows / find 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu.exe" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/script/find?sysOsPlat=windows&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / darwin / find 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/find?sysOsPlat=darwin&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / linux / find 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/find?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / linux / find (install filter) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/find/install?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`nu / linux / exec (no match, warns) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/script/exec/install?sysOsPlat=linux&wutNuPinned=1'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/script/exec/install'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&wutNuPinned=1'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'windows_aarch64' => 'aarch64-pc-windows-msvc',
    'windows_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'vendor' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'windows' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (windows) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'windows' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'windows'] {
    opPrintWarn 'script is for darwin, linux, or windows'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'windows' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'vendor' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


\$env.SCRIPT_EXEC_ACTION = r#'install'#

opPrintWarn r#'no script matched: install'#
\`
`;

snapshot[`nu / windows / exec (no match, warns) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/script/exec/install?sysOsPlat=windows&wutNuPinned=1'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'windows'#

\$env.REQ_PATH = r#'/sh/nu/script/exec/install'#

\$env.REQ_SRCH = r#'?sysOsPlat=windows&wutNuPinned=1'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'windows_aarch64' => 'aarch64-pc-windows-msvc',
    'windows_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'vendor' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'windows' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (windows) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'windows' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'windows'] {
    opPrintWarn 'script is for darwin, linux, or windows'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'windows' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'vendor' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


\$env.SCRIPT_EXEC_ACTION = r#'install'#

opPrintWarn r#'no script matched: install'#
\`
`;

snapshot[`pwsh / windows / exec 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu.exe" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/script/exec/install?sysOsPlat=windows&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / darwin / exec (no match, docker not gated for darwin) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/exec/setup/docker?sysOsPlat=darwin&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / linux / exec (overlay stays in the calling shell) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/exec/setup/docker?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`nu / linux / exec (overlay, already nu) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/script/exec/setup/cargo?sysOsPlat=linux&wutNuPinned=1'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/script/exec/setup/cargo'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&wutNuPinned=1'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'windows_aarch64' => 'aarch64-pc-windows-msvc',
    'windows_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'vendor' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'windows' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (windows) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'windows' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'windows'] {
    opPrintWarn 'script is for darwin, linux, or windows'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'windows' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'vendor' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


\$env.SCRIPT_EXEC_ACTION = r#'setup'#

\$env.SCRIPT_EXEC_PARTS = r#'cargo'#

def wutSelectParse [choice: string, max: int] {
  let trimmed = (\$choice | str trim)
  if (\$trimmed | is-empty) {
    return (1..\$max | each { |i| \$i })
  }
  mut picked = []
  for part in (\$trimmed | split row --regex '[, ]+' | where { |p| \$p | is-not-empty }) {
    let bounds = if (\$part | str contains '-') {
      let halves = (\$part | split row '-')
      if (\$halves | length) != 2 {
        return null
      }
      [(try { \$halves | get 0 | into int } catch { null }), (try { \$halves | get 1 | into int } catch { null })]
    } else {
      let n = (try { \$part | into int } catch { null })
      if \$n == 0 {
        return null
      }
      [\$n, \$n]
    }
    let from = (\$bounds | get 0)
    let to = (\$bounds | get 1)
    if \$from == null or \$to == null or \$from < 1 or \$to > \$max or \$from > \$to {
      return null
    }
    for i in \$from..\$to {
      if \$i not-in \$picked {
        \$picked = (\$picked | append \$i)
      }
    }
  }
  \$picked | sort
}

def wutSelectRead [max: int] {
  if YES in \$env {
    return (1..\$max | each { |i| \$i })
  }
  opPrint ''
  wutSelectParse (input \$"enter number\\\\(s\\\\) [empty=all] \\\\(0=quit | 1[,][-](\$max)\\\\): ") \$max
}


def scriptHasCmd [...cmds: string] {
  \$cmds | any { |cmd| which \$cmd | is-not-empty }
}


# ghpm's table: a rule as wide as each header, columns padded to their widest cell, the last one loose
def scriptTable [headers: list<string>, rows: list<list<string>>] {
  let widths = (\$headers | enumerate | each { |h|
    [(\$h.item | str length)] ++ (\$rows | each { |r| \$r | get -o \$h.index | default '' | str length }) | math max
  })
  let line = { |cells: list<string>|
    \$cells | enumerate | each { |c|
      if \$c.index == ((\$cells | length) - 1) { \$c.item } else { \$c.item | fill --alignment left --width (\$widths | get \$c.index) }
    } | str join ' '
  }
  opPrint (do \$line \$headers)
  opPrint (do \$line (\$headers | each { |h| '-' | fill --alignment left --width (\$h | str length) --character '-' }))
  for r in \$rows { opPrint (do \$line \$r) }
}

def --env scriptPlanRun [] {
  let units = (\$env.SCRIPT_PLAN? | default '[]' | from json)
  # a has_cmd gate is the client's: a script whose tool is missing is not offered, and an action alone is all wut has
  let here = (\$units | where { |u| (\$u.cmds | is-empty) or (scriptHasCmd ...\$u.cmds) })
  if (\$here | is-empty) {
    opPrintWarn 'nothing to do'
    return
  }

  scriptTable ['action' 'tool' 'shell'] (\$here | enumerate | each { |u|
    [\$"(\$u.index + 1)\\\\) (\$u.item.action)", \$u.item.tool, \$u.item.shell]
  })
  let picked = (wutSelectRead (\$here | length))
  if \$picked == null {
    return
  }
  for i in \$picked {
    scriptRunUnit (\$here | get (\$i - 1) | get id)
  }
}

# find accumulates the same way the plan does, so all three shells share one idiom
def --env scriptFindAdd [action: string, ...entries: string] {
  let tools = (
    \$entries | each { |e| \$e | split row '=' }
      | where { |p|
        let cmds = (\$p | get -o 1 | default '')
        (\$cmds | is-empty) or (scriptHasCmd ...(\$cmds | split row ','))
      }
      | each { |p| \$p | get 0 }
  )
  if (\$tools | is-empty) {
    return
  }
  load-env {SCRIPT_FIND_ROWS: ((\$env.SCRIPT_FIND_ROWS? | default []) | append \$"(\$action)|(\$tools | str join ', ')")}
}

# one table, one question, then the listing
def scriptFindShow [] {
  let rows = ((\$env.SCRIPT_FIND_ROWS? | default []) | each { |r| \$r | split row '|' })
  if (\$rows | is-empty) {
    return
  }
  for r in \$rows {
    opPrint (\$r | get 0)
    opPrint \$"  (\$r | get 1)"
  }
  opPrint ''
  scriptTable ['action' 'tools'] (\$rows | each { |r|
    [(\$r | get 0), ((\$r | get 1 | split row ', ') | length | into string)]
  })
}


def --env scriptRunUnit [id: string] {
  match \$id {
    r#'cargo/setup'# => { zsh --no-rcs -c r#'function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opMaybePrintCmd {
  if [[ -z \$NOOP ]]; then
    opPrintCmd "\$@"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opRunSilentCmd {
  eval "\$*" &> /dev/null
}

function opMaybeRunCmd {
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}

function opMaybeRunSilentCmd {
  if [[ -z \$NOOP ]]; then
    opRunSilentCmd "\$@"
  fi
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  opMaybeRunCmd "\$@"
}

function () {
  if [[ \$SYS_OS_PLAT != darwin && \$SYS_OS_PLAT != linux ]]; then
    opPrintWarn 'script is for darwin or linux'
    return
  fi
  if ! type cargo > /dev/null; then
    opPrintWarn 'cargo is not installed'
    return
  fi
  local yn=''
  if [[ \$YES ]]; then
    yn=y
  else
    read 'yn?setup - cargo - install tools (user) [y,[n]]: '
  fi
  if [[ \$yn == n ]]; then
    return
  fi
  local url='https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh'
  opPrintMaybeRunCmd curl --fail-with-body --location --no-progress-meter --url "\${url}" '|' bash
  opPrintMaybeRunCmd cargo binstall cargo-cache
  opPrintMaybeRunCmd cargo binstall cargo-update
}
'# }
    _ => {}
  }
}

\$env.SCRIPT_PLAN = r#'[{"id":"cargo/setup","action":"setup","tool":"cargo","shell":"zsh","cmds":[]}]'#

scriptPlanRun
\`
`;

snapshot[`zsh / linux / exec (overlay stays in the calling shell, cargo) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/exec/setup/cargo?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`pwsh / windows / exec (overlay stays in the calling shell) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu.exe" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/script/exec/setup/cargo?sysOsPlat=windows&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / linux / find (overlay dedup) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/find/setup?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`nu / linux / exec (action only, one plan, no hop) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/script/exec/setup?sysOsPlat=linux&wutNuPinned=1'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/script/exec/setup'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&wutNuPinned=1'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'windows_aarch64' => 'aarch64-pc-windows-msvc',
    'windows_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'vendor' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'windows' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (windows) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'windows' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'windows'] {
    opPrintWarn 'script is for darwin, linux, or windows'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'windows' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'vendor' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


\$env.SCRIPT_EXEC_ACTION = r#'setup'#

def wutSelectParse [choice: string, max: int] {
  let trimmed = (\$choice | str trim)
  if (\$trimmed | is-empty) {
    return (1..\$max | each { |i| \$i })
  }
  mut picked = []
  for part in (\$trimmed | split row --regex '[, ]+' | where { |p| \$p | is-not-empty }) {
    let bounds = if (\$part | str contains '-') {
      let halves = (\$part | split row '-')
      if (\$halves | length) != 2 {
        return null
      }
      [(try { \$halves | get 0 | into int } catch { null }), (try { \$halves | get 1 | into int } catch { null })]
    } else {
      let n = (try { \$part | into int } catch { null })
      if \$n == 0 {
        return null
      }
      [\$n, \$n]
    }
    let from = (\$bounds | get 0)
    let to = (\$bounds | get 1)
    if \$from == null or \$to == null or \$from < 1 or \$to > \$max or \$from > \$to {
      return null
    }
    for i in \$from..\$to {
      if \$i not-in \$picked {
        \$picked = (\$picked | append \$i)
      }
    }
  }
  \$picked | sort
}

def wutSelectRead [max: int] {
  if YES in \$env {
    return (1..\$max | each { |i| \$i })
  }
  opPrint ''
  wutSelectParse (input \$"enter number\\\\(s\\\\) [empty=all] \\\\(0=quit | 1[,][-](\$max)\\\\): ") \$max
}


def scriptHasCmd [...cmds: string] {
  \$cmds | any { |cmd| which \$cmd | is-not-empty }
}


# ghpm's table: a rule as wide as each header, columns padded to their widest cell, the last one loose
def scriptTable [headers: list<string>, rows: list<list<string>>] {
  let widths = (\$headers | enumerate | each { |h|
    [(\$h.item | str length)] ++ (\$rows | each { |r| \$r | get -o \$h.index | default '' | str length }) | math max
  })
  let line = { |cells: list<string>|
    \$cells | enumerate | each { |c|
      if \$c.index == ((\$cells | length) - 1) { \$c.item } else { \$c.item | fill --alignment left --width (\$widths | get \$c.index) }
    } | str join ' '
  }
  opPrint (do \$line \$headers)
  opPrint (do \$line (\$headers | each { |h| '-' | fill --alignment left --width (\$h | str length) --character '-' }))
  for r in \$rows { opPrint (do \$line \$r) }
}

def --env scriptPlanRun [] {
  let units = (\$env.SCRIPT_PLAN? | default '[]' | from json)
  # a has_cmd gate is the client's: a script whose tool is missing is not offered, and an action alone is all wut has
  let here = (\$units | where { |u| (\$u.cmds | is-empty) or (scriptHasCmd ...\$u.cmds) })
  if (\$here | is-empty) {
    opPrintWarn 'nothing to do'
    return
  }

  scriptTable ['action' 'tool' 'shell'] (\$here | enumerate | each { |u|
    [\$"(\$u.index + 1)\\\\) (\$u.item.action)", \$u.item.tool, \$u.item.shell]
  })
  let picked = (wutSelectRead (\$here | length))
  if \$picked == null {
    return
  }
  for i in \$picked {
    scriptRunUnit (\$here | get (\$i - 1) | get id)
  }
}

# find accumulates the same way the plan does, so all three shells share one idiom
def --env scriptFindAdd [action: string, ...entries: string] {
  let tools = (
    \$entries | each { |e| \$e | split row '=' }
      | where { |p|
        let cmds = (\$p | get -o 1 | default '')
        (\$cmds | is-empty) or (scriptHasCmd ...(\$cmds | split row ','))
      }
      | each { |p| \$p | get 0 }
  )
  if (\$tools | is-empty) {
    return
  }
  load-env {SCRIPT_FIND_ROWS: ((\$env.SCRIPT_FIND_ROWS? | default []) | append \$"(\$action)|(\$tools | str join ', ')")}
}

# one table, one question, then the listing
def scriptFindShow [] {
  let rows = ((\$env.SCRIPT_FIND_ROWS? | default []) | each { |r| \$r | split row '|' })
  if (\$rows | is-empty) {
    return
  }
  for r in \$rows {
    opPrint (\$r | get 0)
    opPrint \$"  (\$r | get 1)"
  }
  opPrint ''
  scriptTable ['action' 'tools'] (\$rows | each { |r|
    [(\$r | get 0), ((\$r | get 1 | split row ', ') | length | into string)]
  })
}


def --env scriptRunUnit [id: string] {
  match \$id {
    r#'cargo/setup'# => { zsh --no-rcs -c r#'function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opMaybePrintCmd {
  if [[ -z \$NOOP ]]; then
    opPrintCmd "\$@"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opRunSilentCmd {
  eval "\$*" &> /dev/null
}

function opMaybeRunCmd {
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}

function opMaybeRunSilentCmd {
  if [[ -z \$NOOP ]]; then
    opRunSilentCmd "\$@"
  fi
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  opMaybeRunCmd "\$@"
}

function () {
  if [[ \$SYS_OS_PLAT != darwin && \$SYS_OS_PLAT != linux ]]; then
    opPrintWarn 'script is for darwin or linux'
    return
  fi
  if ! type cargo > /dev/null; then
    opPrintWarn 'cargo is not installed'
    return
  fi
  local yn=''
  if [[ \$YES ]]; then
    yn=y
  else
    read 'yn?setup - cargo - install tools (user) [y,[n]]: '
  fi
  if [[ \$yn == n ]]; then
    return
  fi
  local url='https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh'
  opPrintMaybeRunCmd curl --fail-with-body --location --no-progress-meter --url "\${url}" '|' bash
  opPrintMaybeRunCmd cargo binstall cargo-cache
  opPrintMaybeRunCmd cargo binstall cargo-update
}
'# }
    r#'docker/setup'# => { zsh --no-rcs -c r#'function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opMaybePrintCmd {
  if [[ -z \$NOOP ]]; then
    opPrintCmd "\$@"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opRunSilentCmd {
  eval "\$*" &> /dev/null
}

function opMaybeRunCmd {
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}

function opMaybeRunSilentCmd {
  if [[ -z \$NOOP ]]; then
    opRunSilentCmd "\$@"
  fi
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  opMaybeRunCmd "\$@"
}

function () {
  if ! type docker > /dev/null; then
    opPrintWarn 'docker is not installed'
    return
  fi
  local yn=''
  if [[ \$YES ]]; then
    yn=y
  else
    read 'yn?setup - docker - enable service (system) [y,[n]]: '
  fi
  if [[ -n \$yn && \${(L)yn} != y && \${(L)yn} != yes ]]; then
    return
  fi
  opPrintMaybeRunCmd sudo systemctl enable --now docker
}
'# }
    _ => {}
  }
}

\$env.SCRIPT_PLAN = r#'[{"id":"cargo/setup","action":"setup","tool":"cargo","shell":"zsh","cmds":["cargo"]},{"id":"docker/setup","action":"setup","tool":"docker","shell":"zsh","cmds":["docker"]}]'#

scriptPlanRun
\`
`;

snapshot[`zsh / linux / exec (redirects to nu) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/script/exec/setup?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`nu / linux / find (client side has_cmd listing) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/script/find?sysOsPlat=linux&wutNuPinned=1'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/script/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&wutNuPinned=1'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'windows_aarch64' => 'aarch64-pc-windows-msvc',
    'windows_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'vendor' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'windows' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (windows) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'windows' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'windows'] {
    opPrintWarn 'script is for darwin, linux, or windows'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'windows' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'vendor' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


def scriptHasCmd [...cmds: string] {
  \$cmds | any { |cmd| which \$cmd | is-not-empty }
}


# ghpm's table: a rule as wide as each header, columns padded to their widest cell, the last one loose
def scriptTable [headers: list<string>, rows: list<list<string>>] {
  let widths = (\$headers | enumerate | each { |h|
    [(\$h.item | str length)] ++ (\$rows | each { |r| \$r | get -o \$h.index | default '' | str length }) | math max
  })
  let line = { |cells: list<string>|
    \$cells | enumerate | each { |c|
      if \$c.index == ((\$cells | length) - 1) { \$c.item } else { \$c.item | fill --alignment left --width (\$widths | get \$c.index) }
    } | str join ' '
  }
  opPrint (do \$line \$headers)
  opPrint (do \$line (\$headers | each { |h| '-' | fill --alignment left --width (\$h | str length) --character '-' }))
  for r in \$rows { opPrint (do \$line \$r) }
}

def --env scriptPlanRun [] {
  let units = (\$env.SCRIPT_PLAN? | default '[]' | from json)
  # a has_cmd gate is the client's: a script whose tool is missing is not offered, and an action alone is all wut has
  let here = (\$units | where { |u| (\$u.cmds | is-empty) or (scriptHasCmd ...\$u.cmds) })
  if (\$here | is-empty) {
    opPrintWarn 'nothing to do'
    return
  }

  scriptTable ['action' 'tool' 'shell'] (\$here | enumerate | each { |u|
    [\$"(\$u.index + 1)\\\\) (\$u.item.action)", \$u.item.tool, \$u.item.shell]
  })
  let picked = (wutSelectRead (\$here | length))
  if \$picked == null {
    return
  }
  for i in \$picked {
    scriptRunUnit (\$here | get (\$i - 1) | get id)
  }
}

# find accumulates the same way the plan does, so all three shells share one idiom
def --env scriptFindAdd [action: string, ...entries: string] {
  let tools = (
    \$entries | each { |e| \$e | split row '=' }
      | where { |p|
        let cmds = (\$p | get -o 1 | default '')
        (\$cmds | is-empty) or (scriptHasCmd ...(\$cmds | split row ','))
      }
      | each { |p| \$p | get 0 }
  )
  if (\$tools | is-empty) {
    return
  }
  load-env {SCRIPT_FIND_ROWS: ((\$env.SCRIPT_FIND_ROWS? | default []) | append \$"(\$action)|(\$tools | str join ', ')")}
}

# one table, one question, then the listing
def scriptFindShow [] {
  let rows = ((\$env.SCRIPT_FIND_ROWS? | default []) | each { |r| \$r | split row '|' })
  if (\$rows | is-empty) {
    return
  }
  for r in \$rows {
    opPrint (\$r | get 0)
    opPrint \$"  (\$r | get 1)"
  }
  opPrint ''
  scriptTable ['action' 'tools'] (\$rows | each { |r|
    [(\$r | get 0), ((\$r | get 1 | split row ', ') | length | into string)]
  })
}


scriptFindAdd r#'setup'# r#'cargo=cargo'# r#'docker=docker'#
scriptFindShow
\`
`;

snapshot[`nu / linux / exec (action only, carries has_cmd into the plan) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/script/exec/setup?sysOsPlat=linux&wutNuPinned=1'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/script/exec/setup'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&wutNuPinned=1'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'windows_aarch64' => 'aarch64-pc-windows-msvc',
    'windows_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'vendor' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'windows' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (windows) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'windows' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'windows'] {
    opPrintWarn 'script is for darwin, linux, or windows'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'windows' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'vendor' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


\$env.SCRIPT_EXEC_ACTION = r#'setup'#

def wutSelectParse [choice: string, max: int] {
  let trimmed = (\$choice | str trim)
  if (\$trimmed | is-empty) {
    return (1..\$max | each { |i| \$i })
  }
  mut picked = []
  for part in (\$trimmed | split row --regex '[, ]+' | where { |p| \$p | is-not-empty }) {
    let bounds = if (\$part | str contains '-') {
      let halves = (\$part | split row '-')
      if (\$halves | length) != 2 {
        return null
      }
      [(try { \$halves | get 0 | into int } catch { null }), (try { \$halves | get 1 | into int } catch { null })]
    } else {
      let n = (try { \$part | into int } catch { null })
      if \$n == 0 {
        return null
      }
      [\$n, \$n]
    }
    let from = (\$bounds | get 0)
    let to = (\$bounds | get 1)
    if \$from == null or \$to == null or \$from < 1 or \$to > \$max or \$from > \$to {
      return null
    }
    for i in \$from..\$to {
      if \$i not-in \$picked {
        \$picked = (\$picked | append \$i)
      }
    }
  }
  \$picked | sort
}

def wutSelectRead [max: int] {
  if YES in \$env {
    return (1..\$max | each { |i| \$i })
  }
  opPrint ''
  wutSelectParse (input \$"enter number\\\\(s\\\\) [empty=all] \\\\(0=quit | 1[,][-](\$max)\\\\): ") \$max
}


def scriptHasCmd [...cmds: string] {
  \$cmds | any { |cmd| which \$cmd | is-not-empty }
}


# ghpm's table: a rule as wide as each header, columns padded to their widest cell, the last one loose
def scriptTable [headers: list<string>, rows: list<list<string>>] {
  let widths = (\$headers | enumerate | each { |h|
    [(\$h.item | str length)] ++ (\$rows | each { |r| \$r | get -o \$h.index | default '' | str length }) | math max
  })
  let line = { |cells: list<string>|
    \$cells | enumerate | each { |c|
      if \$c.index == ((\$cells | length) - 1) { \$c.item } else { \$c.item | fill --alignment left --width (\$widths | get \$c.index) }
    } | str join ' '
  }
  opPrint (do \$line \$headers)
  opPrint (do \$line (\$headers | each { |h| '-' | fill --alignment left --width (\$h | str length) --character '-' }))
  for r in \$rows { opPrint (do \$line \$r) }
}

def --env scriptPlanRun [] {
  let units = (\$env.SCRIPT_PLAN? | default '[]' | from json)
  # a has_cmd gate is the client's: a script whose tool is missing is not offered, and an action alone is all wut has
  let here = (\$units | where { |u| (\$u.cmds | is-empty) or (scriptHasCmd ...\$u.cmds) })
  if (\$here | is-empty) {
    opPrintWarn 'nothing to do'
    return
  }

  scriptTable ['action' 'tool' 'shell'] (\$here | enumerate | each { |u|
    [\$"(\$u.index + 1)\\\\) (\$u.item.action)", \$u.item.tool, \$u.item.shell]
  })
  let picked = (wutSelectRead (\$here | length))
  if \$picked == null {
    return
  }
  for i in \$picked {
    scriptRunUnit (\$here | get (\$i - 1) | get id)
  }
}

# find accumulates the same way the plan does, so all three shells share one idiom
def --env scriptFindAdd [action: string, ...entries: string] {
  let tools = (
    \$entries | each { |e| \$e | split row '=' }
      | where { |p|
        let cmds = (\$p | get -o 1 | default '')
        (\$cmds | is-empty) or (scriptHasCmd ...(\$cmds | split row ','))
      }
      | each { |p| \$p | get 0 }
  )
  if (\$tools | is-empty) {
    return
  }
  load-env {SCRIPT_FIND_ROWS: ((\$env.SCRIPT_FIND_ROWS? | default []) | append \$"(\$action)|(\$tools | str join ', ')")}
}

# one table, one question, then the listing
def scriptFindShow [] {
  let rows = ((\$env.SCRIPT_FIND_ROWS? | default []) | each { |r| \$r | split row '|' })
  if (\$rows | is-empty) {
    return
  }
  for r in \$rows {
    opPrint (\$r | get 0)
    opPrint \$"  (\$r | get 1)"
  }
  opPrint ''
  scriptTable ['action' 'tools'] (\$rows | each { |r|
    [(\$r | get 0), ((\$r | get 1 | split row ', ') | length | into string)]
  })
}


def --env scriptRunUnit [id: string] {
  match \$id {
    r#'cargo/setup'# => { zsh --no-rcs -c r#'function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opMaybePrintCmd {
  if [[ -z \$NOOP ]]; then
    opPrintCmd "\$@"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opRunSilentCmd {
  eval "\$*" &> /dev/null
}

function opMaybeRunCmd {
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}

function opMaybeRunSilentCmd {
  if [[ -z \$NOOP ]]; then
    opRunSilentCmd "\$@"
  fi
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  opMaybeRunCmd "\$@"
}

function () {
  if [[ \$SYS_OS_PLAT != darwin && \$SYS_OS_PLAT != linux ]]; then
    opPrintWarn 'script is for darwin or linux'
    return
  fi
  if ! type cargo > /dev/null; then
    opPrintWarn 'cargo is not installed'
    return
  fi
  local yn=''
  if [[ \$YES ]]; then
    yn=y
  else
    read 'yn?setup - cargo - install tools (user) [y,[n]]: '
  fi
  if [[ \$yn == n ]]; then
    return
  fi
  local url='https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh'
  opPrintMaybeRunCmd curl --fail-with-body --location --no-progress-meter --url "\${url}" '|' bash
  opPrintMaybeRunCmd cargo binstall cargo-cache
  opPrintMaybeRunCmd cargo binstall cargo-update
}
'# }
    r#'docker/setup'# => { zsh --no-rcs -c r#'function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opMaybePrintCmd {
  if [[ -z \$NOOP ]]; then
    opPrintCmd "\$@"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opRunSilentCmd {
  eval "\$*" &> /dev/null
}

function opMaybeRunCmd {
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}

function opMaybeRunSilentCmd {
  if [[ -z \$NOOP ]]; then
    opRunSilentCmd "\$@"
  fi
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  opMaybeRunCmd "\$@"
}

function () {
  if ! type docker > /dev/null; then
    opPrintWarn 'docker is not installed'
    return
  fi
  local yn=''
  if [[ \$YES ]]; then
    yn=y
  else
    read 'yn?setup - docker - enable service (system) [y,[n]]: '
  fi
  if [[ -n \$yn && \${(L)yn} != y && \${(L)yn} != yes ]]; then
    return
  fi
  opPrintMaybeRunCmd sudo systemctl enable --now docker
}
'# }
    _ => {}
  }
}

\$env.SCRIPT_PLAN = r#'[{"id":"cargo/setup","action":"setup","tool":"cargo","shell":"zsh","cmds":["cargo"]},{"id":"docker/setup","action":"setup","tool":"docker","shell":"zsh","cmds":["docker"]}]'#

scriptPlanRun
\`
`;
